yaml-doc-tool version to 0.7.0

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<relativePath></relativePath>
 	</parent>
 
-	<version>0.6.1</version>
+	<version>0.7.0</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>yaml-doc-maven-plugin</name>
@@ -28,7 +28,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
-		<yaml-doc-version>0.6.1</yaml-doc-version>
+		<yaml-doc-version>${project.version}</yaml-doc-version>
 	    <!-- sonar cloud configuration -->
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.organization>fugerit-org</sonar.organization>
